# structuralcodes

./: .buildinfo  .gitignore  .pylintrc  EX1_part1.ipynb  EX2_part1.ipynb  EX3.ipynb  Example1.py  Example1_crackprop.py  Example1_rot30.py  Example1_v1.py  Issues.ipynb  Issues_old.ipynb  LICENSE  README.md  SLS_section_response.py  TestMarin.py  genindex.html  index.html  makefile  objects.inv  prueba.py  pruebas.ipynb  pruebas.py  pruebas2.py  pruebas4.py  purebas3.py  pyproject.toml  requirements.txt  search.html  searchindex.js  sls_demo.ipynb  test.ipynb  test.py  test_generic.ipynb  test_rectangular.ipynb  tippy_rtd_cache.json  tox.ini
.github/workflows/: build.yaml  create-release.yml  sphinx.yml
_sources/: index.md.txt
_sources/theory/: section_integrator.md.txt
_static/tippy/: index.1126d9b9-bd00-4d1f-ab02-9b8fd516225b.js  (+6 more)
api/: index.html  library_structure.html
contributing/: index.html
docs/: README.md  conf.py  index.md  requirements.txt
examples/: index.html
installation/: index.html
quickstart/: index.html
structuralcodes/: __init__.py
tests/: test_concrete_diff_casting_time.py  test_concrete_ec2_2004.py  test_concrete_ec2_2023.py  test_concrete_mc2010.py  test_concrete_punching.py  test_concrete_shear.py  test_concrete_torsion.py  test_constitutive_laws.py  test_ec2_2004_annex_B_shrink_and_creep.py  test_ec2_2004_concrete_material_properties.py  test_ec2_2004_crack_control.py  test_ec2_2004_section_7_3_crack_control.py  test_ec2_2004_shear.py  test_ec2_2023_annexB_time_dependent.py  test_ec2_2023_section5_materials.py  test_ec2_2023_section9_sls.py  test_ec2_shear.py  test_generic_section.py  test_geometry.py  test_get_set_design_code.py  test_marin_integration.py  test_mc2010_creep_and_shrinkage.py  test_mc2010_material_properties.py
theory/: crs.html  index.html  section_calculator.html  section_integrator.html
usage/: index.html
versioning/: index.html
(+629 files in other folders)
